# sentiment-LLM-robust-eval

./: .gitignore  AI_ASSISTANT_CONTEXT_AND_INSTRUCTIONS.md  README.md  analysis.ipynb  analysis.md  analysis.py  assignment_description.md  full_analysis.md  generate_report_assets.py  pyproject.toml  pytest.ini
assets/: best_worst_combinations.md  context_distribution.md  context_enhancement.md  dimensional_analysis.md  error_summary.md  key_insights.md  model_summary.md
config/: README.md  experiment_config.json  test_config.json
deep_learning_final_assignment/: __init__.py
results/: baseline_async_results_detailed_20250526_005859.json  baseline_async_results_detailed_20250526_005918.json  baseline_async_results_detailed_20250526_011816.json  baseline_async_results_detailed_20250526_011942.json  baseline_async_results_detailed_20250526_015953.json  baseline_async_results_summary_20250526_005918.json  baseline_async_results_summary_20250526_011816.json  baseline_async_results_summary_20250526_011942.json  baseline_async_results_summary_20250526_015953.json  context_enhanced_prompts_20250526_011950.json  context_enhanced_prompts_20250526_020002.json  context_enhanced_results_detailed_20250526_150518.json  context_enhanced_results_detailed_20250526_150746.json  context_enhanced_results_summary_20250526_150518.json  context_enhanced_results_summary_20250526_150746.json  context_selection_audit_20250526_011824.json  context_selection_audit_20250526_011950.json  context_selection_audit_20250526_020002.json
scripts/: run_context_enhanced_execution.py  run_experiment.py  (+3 more)
(+29 files in other folders)
